infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
      service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
      service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.black-ticket-rd.shop'
spec:
    ingressClassName: nginx
    rules:
        - host: wwww.black-ticket-rd.shop.com
          http:
              paths:
                  - path: /api/users/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                          name: auth-srv
                          port: 
                            number: 3000
                  - path: /api/orders/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                          name: order-srv
                          port: 
                            number: 3000
                  - path: /api/payments/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                          name: payment-srv
                          port: 
                            number: 3000
                  - path: /api/tickets/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                          name: main-srv
                          port: 
                            number: 3000
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                          name: client-srv
                          port: 
                            number: 3000
    


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-myserviceb
# spec:
#   rules:
#   - host: myserviceb.foo.org
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: myserviceb
#             port:
#               number: 80
#   ingressClassName: nginx
